- finalized SubmissionController and SubmissionService.